--- a/client/wxapp/components/home/home.wxss
+++ b/client/wxapp/components/home/home.wxss
@@ -46,7 +46,8 @@
 
 .guide .guideTop .guideTopLeft .iconfont {
   margin-right: 16rpx;
-  font-size: 26rpx;
+  font-size: 34rpx;
+  font-weight: 700;
 }
 
 .guide .guideTop .guideTopLeft .storeName {
@@ -282,18 +283,19 @@
 .dishList .detailsList .dishMenuItem .dishDetails .operate .selectCate {
   float: right;
   color: var(--color8);
+  font-size: 35rpx;
 }
 
 .dishList .detailsList .dishMenuItem .dishDetails .operate .selectCateInfo{
   float: right;
   color: var(--white);
-  width: 48rpx;
-  height: 22rpx;
+  width: 96rpx;
+  height: 44rpx;
   background-color: var(--color3);
-  border-radius: 11rpx;
+  border-radius: 22rpx;
   text-align: center;
-  line-height: 22rpx;
-  font-size: 11.31rpx;
+  line-height: 44rpx;
+  font-size: 22.63rpx;
 }
 
 
@@ -451,27 +453,27 @@
 }
 .modal .modalView .scrollView .configMenu .configTitle {
   margin-bottom: 24rpx;
-  font-size: 14rpx;
+  font-size: 22rpx;
   color: var(--white);
   text-align: center;
-  width: 84rpx;
-  height: 28rpx;
+  width: 126rpx;
+  height: 42rpx;
   background-color: var(--color3);
-  line-height: 28rpx;
-  border-radius: 14rpx;
+  line-height: 42rpx;
+  border-radius: 22rpx;
 }
 .modal .modalView .scrollView .configMenu .selectConfigCard {
   display: inline-block;
-  height: 35rpx;
-  line-height: 35rpx;
-  padding: 0 24rpx;
-  border-radius: 6rpx;
+  height: 46rpx;
+  line-height: 46rpx;
+  padding: 0 38rpx;
+  border-radius: 24rpx;
   background-color: transparent;
   color: var(--color11);
-  font-size: 21rpx;
+  font-size: 26.64rpx;
   margin-right: 20rpx;
   margin-bottom: 20rpx;
-  border: 1rpx solid var(--color11);
+  border: 1rpx solid var(--color12);
 }
 .modal .modalView .scrollView .configMenu .selectConfigCard.select {
   background-color: var(--color12);
@@ -514,7 +516,7 @@
   margin-bottom: 50rpx;
 }
 .modal .modalView .cofigFooter .priceDetail .leftDetail .price {
-  font-size: 31.43rpx;
+  font-size: 40rpx;
   font-weight: 700;
   color: var(--color7);
 }
@@ -529,7 +531,7 @@
 .modal .modalView .cofigFooter .priceDetail .addNum .iconfont {
   display: inline-block;
   /* border-radius: 50%; */
-  font-size: 22rpx;
+  font-size: 32rpx;
   text-align: center;
   /* background-color: var(--color8); */
   color: var(--color8);
@@ -545,7 +547,7 @@
   display: inline-block;
   text-align: center;
   color: var(--color4);
-  font-size: 25rpx;
+  font-size: 37.62rpx;
 }
 .modal .modalView .cofigFooter .btnBox{
   width: 447rpx;
@@ -617,7 +619,7 @@
 
 .home .cardList .cardListLeft .totalPrice {
   color: var(--color20);
-  font-size: 30.25rpx;
+  font-size: 40rpx;
   margin-left: 30rpx;
 }
 .home .cardList .cardListRight {
@@ -674,6 +676,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  top:1px;
 }
 .home .cardMask .cardDetailContent .cardDetail .iconfont {
   font-size: 22rpx;
@@ -681,14 +684,14 @@
   display: none;
 }
 .home .cardMask .cardDetailContent .cardDetail .btnClearCar{
-  width: 85rpx;
-  height: 28rpx;
-  border-radius: 15rpx;
+  width: 127rpx;
+  height: 42rpx;
+  border-radius: 22rpx;
   background-color: var(--color3);
   text-align: center;
-  line-height: 28rpx;
+  line-height: 42rpx;
   color: var(--white);
-  font-size: 15rpx;
+  font-size: 22rpx;
   display: inline-block;
   margin-right: 31rpx;
 }
@@ -709,7 +712,7 @@
   display: flex;
   justify-content:flex-start;
   align-items: center;
-  width: 585rpx;
+  width: 580rpx;
 } 
 .home .cardMask .cardDetailContent .cardDetailList .cardDetailListCardLeft .left{
   width: 140rpx;
@@ -725,6 +728,7 @@
   font-size: 27rpx;
   color: var(--color1);
   font-weight: 700;
+  line-height: 1.2;
 }
 .home .cardMask .cardDetailContent .cardDetailList .cardDetailListCardLeft .right .num{
   margin:25rpx 0 40rpx 0;
@@ -741,7 +745,7 @@
 }
 .home .cardMask .cardDetailContent .cardDetailList .cardDetailListCard .cardDetailListCardRight  .addNum .iconfont {
   display: inline-block;
-  font-size: 22rpx;
+  font-size: 35rpx;
   text-align: center;
   color: var(--color8);
 }
@@ -756,7 +760,7 @@
   display: inline-block;
   text-align: center;
   color: var(--color4);
-  font-size: 25rpx;
+  font-size: 37.62rpx;
 }
 
 
