--- a/client/wxapp/components/order/order.wxml
+++ b/client/wxapp/components/order/order.wxml
@@ -6,7 +6,8 @@
 				<view class="top flexBox">
 					<view class="storeName">
 						<image class="storeImg" src="{{item.shopLogoImg}}"></image>
-						{{item.shopname}} >
+						{{item.shopname}} 
+						<text class="iconfont icon_arrow_right"></text>
 						<text class="type">{{item.sendType == 1 ? '自提' : '外卖'}}
 						</text>
 					</view>
@@ -31,7 +32,7 @@
 							</view>
 						</view>
 					</view>
-					<text class="iconCommon">></text>
+					<text class="iconCommon iconfont icon_arrow_right"></text>
 				</view>
 				<view class="bottom">
 					<!-- <view class="tips" wx:if="{{orderType==2 && item.oderStatus == 1}}">订单制作完成,等待骑手接单</view> -->
