--- a/client/wxapp/components/order/order.wxss
+++ b/client/wxapp/components/order/order.wxss
@@ -1,4 +1,5 @@
 /* components/order/order.wxss */
+@import "../../app.wxss";
 .content { width: 100%; height: 100%;overflow: hidden;background-color: var(--color24);}
 .topBabs .van-hairline--top-bottom:after {border-top: none;}
 .listBox .flexBox{display: flex;justify-content: space-between;align-items: center;}
@@ -8,7 +9,8 @@
 .listBox .listItem .top {font-size: 28rpx}
 .listBox .listItem .top .storeName {text-align: left;color: var(--color27);font-size: 30.4rpx;}
 .listBox .listItem .top .storeName .storeImg{width: 40rpx;height: 40rpx;vertical-align: middle;display: none;}
-.listBox .listItem .top .storeName .type{width: 60rpx;height: 37rpx;display: inline-block;background-color: var(--color3);color: var(--white);font-size: 20rpx;line-height: 37rpx;text-align: center;border-radius: 15rpx;margin-left: 20rpx;}
+.listBox .listItem .top .storeName .type{width: 72rpx;height: 45rpx;display: inline-block;background-color: var(--color3);color: var(--white);font-size: 24rpx;line-height: 45rpx;text-align: center;border-radius: 25rpx;margin-left: 20rpx;}
+.listBox .listItem .top .storeName .icon_arrow_right {font-size: 28rpx;}
 .listBox .listItem .top .orderStatus{color: var(--color27);font-size: 30.4rpx;}
 .listBox .listItem .center .imgList{width: 100%;padding: 25rpx 0;overflow: hidden;white-space: nowrap;}
 .listBox .listItem .center .imgList .listFood{overflow: hidden;margin-right: 20rpx;}
@@ -21,7 +23,7 @@
 .listBox .listItem .bottom{color:var(--color31);font-size: 17rpx;}
 .listBox .listItem .bottom .tips{color: #d2ad7d;margin-bottom: 10rpx;}
 .listBox .listItem .bottom .num{margin-bottom: 10rpx;}
-.listBox .listItem .bottom .totalPrize{color: var(--color7);font-weight: 700;font-size: 32rpx;}
+.listBox .listItem .bottom .totalPrize{color: var(--color7);font-weight: 700;font-size: 35rpx;}
 .listBox .listItem .buttonBox .btn{font-size: 24rpx;width: 146rpx;height: 56rpx;margin-top: 36rpx;border: 1rpx solid #d2ad7d;text-align: center;color: #d2ad7d;line-height: 56rpx;}
 
 .noData{color: #000;font-size: 30rpx;text-align: center;position: absolute;top: 50%;left: 50%;transform: translate(-50%,0);}
