--- a/client/wxapp/common/css/common.wxss
+++ b/client/wxapp/common/css/common.wxss
@@ -1,14 +1,13 @@
 /* ---------------------------------------- css base 基础部分---------------------------------------- */
 page { height: 100%;background-color: #fff; /*;*//*font-family: "w3";*/overflow: hidden;}
-
-view { word-break:break-word; background-position: 50% 50%; background-repeat: no-repeat; background-size:100% 100%; background-origin: padding-box; background-clip: padding-box; line-height: 1; box-sizing: border-box; display: block; position: relative; }
-view[hidden] { display: none !important;}
-
 .article { width: 100%; height: 100%;overflow: hidden;}
 .section{ width: 100%; height: 100%; position: absolute; left: 0; top: 0;}
 .aside{ width: 100%; height: 100%; position: absolute; left: 0; top: 0;}
 .pop{ width: 100%; height: 100%; position: absolute; left: 0; top: 0;}
 .layer{ position: absolute; left: 0; top: 0; width: 100%; height: 100%;}
+
+view { word-break:break-word; background-position: 50% 50%; background-repeat: no-repeat; background-size:100% 100%; background-origin: padding-box; background-clip: padding-box; line-height: 1; box-sizing: border-box; display: block; position: relative; }
+view[hidden] { display: none !important;}
 
 /* ::-webkit-scrollbar { width: 10rpx; height: 100%; } */
 button{padding: 0;}
@@ -266,7 +265,11 @@ page{
   --color44: #e5e5e5;
   --color45: #010101;
   --color46: #bfbfbf;
-  --color45: #4c4c4c;
+  --color47: #4c4c4c;
+  --color48: #7f8799;
+  --color49: #f0f0f0;
+  --color50: #b2b2b2;
+  --color51: #5f6572;
 }
 
 .hide{display: none!important;}
