--- a/client/wxapp/components/user/user.wxss
+++ b/client/wxapp/components/user/user.wxss
@@ -1,16 +1,27 @@
 /* components/user/user.wxss */
-.content { width: 100%; height: 100%;overflow: hidden;background-color: var(--white);padding: 25rpx 35rpx;}
+.content { width: 100%; height: 100%;overflow: hidden;background-color: var(--white);padding: 10rpx 35rpx;}
 .content .topTxt{font-size: 27rpx;color: var(--color31);margin-bottom: 10rpx;}
-.content .infoBox{width: 100%;height: 162rpx;background-color: var(--white);border-radius: 10rpx;box-shadow:1rpx 0px 15rpx var(--color32);padding: 34rpx 25rpx 0;margin-bottom: 20rpx;}
-.content .infoBox .title{font-size: 35rpx; color: var(--color25);margin-bottom: 15rpx;}
+.content .top{width: 100%;height: auto;background-color: var(--white);border-radius: 10rpx;box-shadow:1rpx 0px 15rpx var(--color32);margin-bottom: 10rpx;}
+.content .infoBox{height: 210rpx;border-top: 1rpx solid transparent;padding-left: 40rpx;}
+.content .infoBox .title{font-size: 35rpx; color: var(--color25);margin-bottom: 15rpx;margin-top: 75rpx;}
 .content .infoBox .btnLogin{width: 127rpx;height: 35rpx;border-radius: 18rpx;background-color: var(--color3);text-align: center;line-height: 35rpx;color: var(--white);font-size: 18rpx;}
 .content .infoBox .btnLogin .btnAuth{width: 100%;height: 100%;position: absolute;top: 0;left: 0;opacity: 0;}
 .content .infoBox .userName{font-size: 27rpx;color: var(--color31);}
-.content .infoBox .UserImgBox{width: 150rpx;height: 150rpx;border-radius: 50%;background-color: var(--color6);overflow: hidden;position: absolute;top: -45rpx;right: 58rpx;}
+.content .infoBox .UserImgBox{width: 150rpx;height: 150rpx;border-radius: 50%;background-color: var(--color6);overflow: hidden;position: absolute;top: 30rpx;right: 42rpx;}
 .content .infoBox .UserImgBox .img{width: 100%;height: 100%;border-radius: 50%;}
 
 /* couponBox */
-.content .couponBox{width: 100%;background-color: var(--white);border-radius: 10rpx;box-shadow:1rpx 0px 15rpx var(--color32);padding: 0 25rpx;}
-.content .couponBox .item{height: 120rpx;text-align: left;display: flex;justify-content: start;align-items: center;border-bottom: 2rpx solid var(--color15);}
-.content .couponBox .item .img{width: 131rpx;height: 71rpx;}
-.content .couponBox .item .txt{font-size: 21rpx;color: var(--color33);}
+.content .couponBox{width: 100%;background-color: var(--white);border-radius: 10rpx;padding: 0 40rpx;}
+.content .couponBox .item{height: 120rpx;text-align: left;display: flex;justify-content: start;align-items: center;border-top: 2rpx solid var(--color15);}
+.content .couponBox .item .img{width: 65rpx;height: auto;margin-right: 30rpx;}
+.content .couponBox .item .txt{font-size: 27rpx;color: var(--color33);}
+
+.content .top2{width: 100%;height: 130rpx;display: flex;justify-content: center;align-items: center;}
+.content .top2 .btn{width: 362rpx;height: 57rpx;line-height: 57rpx;font-size: 27rpx;color: var(--white);background-color: var(--color3);text-align: center;}
+
+.content .top3 .couponBox .item{height: 93rpx;}
+.content .top3 .couponBox .item .txt1{font-size: 27rpx;color: var(--color52);position: absolute; right: 0;}
+
+.content .top3 .pointerBox{width: 475rpx;padding: 15rpx 0 50rpx;display: flex;justify-content: space-between;align-items: center;margin: 0 auto;}
+.content .top3 .pointerBox .pitem{width: 43rpx;height: 43rpx;display: block;border-radius: 50%;background-color: var(--color52);}
+.content .top3 .pointerBox .pitem.active{background-color: var(--color3);}
