--- a/client/wxapp/pages/shops/shops.wxss
+++ b/client/wxapp/pages/shops/shops.wxss
@@ -68,13 +68,34 @@
   height: 100%;
 }
 .storeBox scroll-view .itemBorder{
-  padding: 30rpx 35rpx 0;
+  padding: 45rpx 35rpx 0;
   background: var(--color6);
-  border-radius: 30rpx;
-  overflow: hidden;
   box-sizing: border-box;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
+.storeBox scroll-view .itemBorder::before,
+.storeBox scroll-view .itemBorder::after{
+  content: '';
+  width: 24rpx;
+  height: 24rpx;
+  border-radius: 50%;
+  background-color: var(--color23);
+  position: absolute;
+  bottom: -12.5rpx;
+  z-index: 99;
+}
+.storeBox scroll-view .itemBorder:last-child::before,
+.storeBox scroll-view .itemBorder:last-child::after{
+  content: none;
+}
+.storeBox scroll-view .itemBorder::before{
+  left: -10rpx;
+}
+
+.storeBox scroll-view .itemBorder::after{
+  right: -10rpx;
+}
+
 .storeBox scroll-view .item {
   width: 100%;
   height: 100%;
@@ -82,15 +103,19 @@
   align-items: center;
   justify-content: space-between;
   /* margin-bottom: 25rpx; */
-  border-bottom: 1rpx solid var(--color23);
-  padding-bottom: 30rpx;
+  border-bottom: 2rpx solid var(--color23);
+  padding-bottom: 58rpx;
 }
 .storeBox scroll-view .itemBorder:first-child{
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
 .storeBox scroll-view .itemBorder:last-child{
-  min-height: 250rpx;
+  /* min-height: 250rpx; */
+  padding-bottom: 45rpx;
+  border-radius: 30rpx;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
 .storeBox scroll-view .item>.left {
   /* width: 78%; */
@@ -99,7 +124,7 @@
   text-align: justify;
 }
 .storeBox scroll-view .item>.left .item-title{
-  font-size: 30rpx;
+  font-size: 35rpx;
   font-weight: bold;
   color: var(--color25);
 }
@@ -120,9 +145,9 @@
 
 
 .storeBox scroll-view .item>.left .item-distance{
-  font-size: 14rpx;
+  font-size: 25rpx;
   color: var(--color27);
-  margin-top: 25rpx;
+  margin-top: 20rpx;
 }
 .storeBox scroll-view .item>.left .item-time{
   font-size: 19rpx;
@@ -130,7 +155,7 @@
   margin-top: 15rpx;
 }
 .storeBox scroll-view .item>.left .item-adress{
-  font-size: 18rpx;
+  font-size: 28rpx;
   color: var(--color28);
   margin-top: 15rpx;
 }
