--- a/client/wxapp/pages/userCoupon/userCoupon.wxml
+++ b/client/wxapp/pages/userCoupon/userCoupon.wxml
@@ -1,91 +1,57 @@
-<view class="article">
-  <scroll-view scroll-y class="orderInfoScroll">
-    <view class="box couponList">
-      <view class="con">
-        <view class="couponListItem flexBox">
-          <view class="left">
-            <view class="txt1">饮品免单券</view>
-            <view class="date">2020-09-01至2020-09-28</view>
-            <view class="btnCheck">查看详情</view>
-            <view class="btnTips">免单券</view>
-          </view>
-          <view class="right">
-            <text class="txt">28</text>
-            <text class="txt2">元</text>
-            <view class="circle_list">
-              <text></text>
-              <text></text>
-              <text></text>
-              <text></text>
-              <text></text>
-              <text></text>
-              <text></text>
-              <text></text>
-              <text></text>
-              <text></text>
-              <text></text>
-              <text></text>
-              <text></text>
-            </view>
-          </view>
-        </view>
-        <view class="couponListItem flexBox">
-          <view class="left">
-            <view class="txt1">饮品免单券</view>
-            <view class="date">2020-09-01至2020-09-28</view>
-            <view class="btnCheck">查看详情</view>
-            <view class="btnTips">免单券</view>
-          </view>
-          <view class="right">
-            <text class="txt">28</text>
-            <text class="txt2">元</text>
-            <view class="circle_list">
-              <text></text>
-              <text></text>
-              <text></text>
-              <text></text>
-              <text></text>
-              <text></text>
-              <text></text>
-              <text></text>
-              <text></text>
-              <text></text>
-              <text></text>
-              <text></text>
-              <text></text>
-            </view>
-          </view>
-        </view>
-        <view class="couponListItem flexBox type2">
-          <view class="left">
-            <view class="txt1">订单满100-10元</view>
-            <view class="date">2020-09-01至2020-09-28</view>
-            <view class="btnCheck">满足一定金额可使用</view>
-            <view class="btnTips">满减券</view>
-          </view>
-          <view class="right">
-            <text class="txt">10</text>
-            <text class="txt2">元</text>
-            <text class="btnTxt3">不能使用</text>
-            <view class="circle_list">
-              <text></text>
-              <text></text>
-              <text></text>
-              <text></text>
-              <text></text>
-              <text></text>
-              <text></text>
-              <text></text>
-              <text></text>
-              <text></text>
-              <text></text>
-              <text></text>
-              <text></text>
-            </view>
-          </view>
-        </view>
-      </view>
-      <view class="noList">没有更多折扣券了哦～</view>
-    </view>
-  </scroll-view>
+<view class="article {{boxType == 1 ? 'boxType1' : 'boxType2'}}">
+	<scroll-view scroll-y class="orderInfoScroll">
+		<view class="box couponList">
+			<view class="con">
+				<view class="couponListItem flexBox {{item.isAct ? 'active': ''}} {{item.isUse ? '' : 'type2'}}" catchtap="{{boxType == 1 ? 'btnShowClick' : 'btnSelectClick'}}" wx:for="{{couponList}}" wx:key="index" data-index="{{index}}">
+					<view class="left">
+						<view class="txt1">{{item.title}}</view>
+						<view class="date">{{item.startDate}}至{{item.endDate}}</view>
+						<view class="btnCheck btnCheck1">查看详情</view>
+						<view class="btnCheck btnCheck2">{{item.typeTxt}}</view>
+						<view class="btnTips">{{item.btnType}}</view>
+					</view>
+					<view class="right">
+						<view class="border">
+							<text class="txt">{{item.money}}</text>
+							<text class="txt2">元</text>
+							<text class="btnTxt3">立即使用</text>
+						</view>
+						<text class="btnTxt4" wx:if="{{item.isEnd}}">即将过期</text>
+						<view class="circle_list">
+							<text></text>
+							<text></text>
+							<text></text>
+							<text></text>
+							<text></text>
+							<text></text>
+							<text></text>
+							<text></text>
+							<text></text>
+							<text></text>
+							<text></text>
+							<text></text>
+							<text></text>
+						</view>
+					</view>
+				</view>
+			</view>
+			<view class="noList">没有更多折扣券了哦～</view>
+		</view>
+	</scroll-view>
+	<view class="btn btn1" catchtap="btnSure">确定</view>
+	<view class="btn btn2" catchtap="btnOrder">立即点单</view>
+</view>
+
+<!-- 弹窗 -->
+<view class="popupBox" wx:if="{{isPopup}}">
+	<view class="mask"></view>
+	<view class="conBox">
+		<view class="title">饮品免单券</view>
+		<view class="scrollBox">
+			<scroll-view scroll-y class="scroll">
+
+			</scroll-view>
+		</view>
+		<view class="btn" catchtap="btnClosePopup">我知道了</view>
+	</view>
 </view>
