--- a/client/wxapp/components/user/user.wxss
+++ b/client/wxapp/components/user/user.wxss
@@ -33,9 +33,9 @@
 
 /* left */
 .content .top4 .couponBox .flexBox{display: flex;justify-content: space-between;align-items: center;}
-.content .top4 .couponBox .couponListItem .left{width: calc(100% - 185rpx);background-color: var(--white);height: 100%;border-top-left-radius:12rpx;border-bottom-left-radius:12rpx;box-shadow:1rpx 0px 15rpx var(--color32);padding: 30rpx 0 20rpx 30rpx;}
+.content .top4 .couponBox .couponListItem .left{width: calc(100% - 185rpx);background-color: var(--white);height: 100%;border-top-left-radius:12rpx;border-bottom-left-radius:12rpx;box-shadow:1rpx 0px 15rpx var(--color32);padding: 25rpx 0 20rpx 25rpx;}
 .content .top4 .couponBox .couponListItem .left .txt1{font-size: 34rpx;color: var(--color47);}
-.content .top4 .couponBox .couponListItem .left .date{width: 376rpx; font-size: 26rpx;color: var(--color48);padding: 25rpx 0;border-bottom: 1px solid var(--color49);}
+.content .top4 .couponBox .couponListItem .left .date{width: 376rpx; font-size: 26rpx;color: var(--color48);padding: 20rpx 0;border-bottom: 1px solid var(--color49);}
 .content .top4 .couponBox .couponListItem .left .btnCheck{font-size: 26rpx;color: var(--color50);margin-top: 20rpx;}
 .content .top4 .couponBox .couponListItem .left .btnTips{width: 88rpx;height: 29rpx;line-height: 29rpx;text-align: center; font-size: 18rpx;color: var(--white);background-color: var(--color3);position: absolute;top: 32rpx;right: 80rpx;}
 
@@ -48,3 +48,14 @@
 .content .top4 .couponBox .couponListItem .right .circle_list{position:absolute!important;top: 0; left: -3px;}
 .content .top4 .couponBox .couponListItem .right .circle_list:after{  content: '';  position: absolute;  top: 0;  bottom: 0;  left: 14rpx;  right: 0;  z-index: 1;  background-color: var(--white);  }  
 .content .top4 .couponBox .couponListItem .right .circle_list>text{display: block;background-color:var(--white);  width:13rpx;  height:13rpx;  border-radius:50%;  margin-bottom:5rpx;}  
+
+
+
+
+.popupBox{width: 100%;height: 100%;position: absolute;top: 0;left: 0;}
+.popupBox .mask{width: 100%;height: 100%;position: absolute;top: 0;left: 0;background-color: rgba(0, 0, 0, 0.62);}
+.popupBox .conBox{width: 690rpx;height: 675rpx;position: absolute;top: 50%;left: 50%;transform:translate(-50%,-50%);background-color: var(--white);border-radius: 10rpx;padding-top: 33rpx;}
+.popupBox .conBox .title{text-align: center;font-size: 32rpx;color: var(--color25);}
+.popupBox .conBox .scrollBox{width: 100%;height: 445rpx;padding: 0 35rpx;margin-top: 54rpx;}
+.popupBox .conBox .scrollBox .scroll{width: 100%;height: 100%;}
+.popupBox .conBox .btn{width: 206rpx;height: 50rpx;line-height: 50rpx;border-radius: 25rpx;font-size: 30rpx;color: var(--white);background-color: var(--color3);margin: 0 auto;text-align: center;}
