--- a/client/wxapp/pages/orderSettleDetail/orderSettleDetail.wxss
+++ b/client/wxapp/pages/orderSettleDetail/orderSettleDetail.wxss
@@ -43,3 +43,7 @@ page { height: 100%; background-color: var(--color24);}
 .orderInfoScroll .box .cardListBox .totalBoxDetail{color: var(--color20);margin-bottom: 20rpx;margin-left: 15rpx;}
 .orderInfoScroll .box .cardListBox .totalBoxDetail .left{font-size: 25rpx;}
 .orderInfoScroll .box .cardListBox .totalBoxDetail .right{font-size: 35rpx;font-weight: 700;}
+
+.codeBox{margin: 25rpx auto;border: 1rpx solid var(--color3);overflow: hidden;width: 260rpx;height: 260rpx;}
+.codeBox canvas{position: absolute;top: 50%;left: 50%;transform: translate(-50%,-50%);}
+/* .codeBox .img{width: 100%;height: 100%;position: absolute;top: 0;left: 0;} */
