--- a/client/wxapp/common/css/common.wxss
+++ b/client/wxapp/common/css/common.wxss
@@ -6,7 +6,7 @@ page { height: 100%;background-color: #fff; /*;*//*font-family: "w3";*/overflow:
 .pop{ width: 100%; height: 100%; position: absolute; left: 0; top: 0;}
 .layer{ position: absolute; left: 0; top: 0; width: 100%; height: 100%;}
 
-view { word-break:break-word; background-position: 50% 50%; background-repeat: no-repeat; background-size:100% 100%; background-origin: padding-box; background-clip: padding-box; line-height: 1; box-sizing: border-box; display: block; position: relative; }
+view { word-break:break-word; background-position: 50% 50%; background-repeat: no-repeat; background-size:100% 100%; background-origin: padding-box; background-clip: padding-box; /*line-height: 1;*/ box-sizing: border-box; display: block; /*position: relative; */}
 view[hidden] { display: none !important;}
 
 /* ::-webkit-scrollbar { width: 10rpx; height: 100%; } */
