--- a/client/wxapp/components/home/home.wxss
+++ b/client/wxapp/components/home/home.wxss
@@ -1,4 +1,5 @@
 @import "../../app.wxss";
+view { position: relative; }
 .conBox {
   width: 100%;
   height: 100%;
@@ -523,7 +524,7 @@
 .modal .modalView .cofigFooter .priceDetail .leftDetail .selectConfig {
   font-size: 22rpx;
   color: var(--color16);
-  margin-top: 20rpx;
+  margin-top: 10rpx;
 }
 .modal .modalView .cofigFooter .priceDetail .addNum > text {
   vertical-align: middle;
@@ -549,6 +550,16 @@
   color: var(--color4);
   font-size: 37.62rpx;
 }
+.modal .modalView .cofigFooter .priceDetail .addNum  .RemainingTxt{
+  display: block;
+  font-size: 26rpx;
+  color: var(--color7);
+  margin-top: 10rpx;
+  text-align: center;
+}
+
+
+
 .modal .modalView .cofigFooter .btnBox{
   width: 447rpx;
   margin: 0 auto;
@@ -570,7 +581,10 @@
   background-color: var(--color3);
   color: var(--white);
 }
-
+.modal .modalView .cofigFooter .addCar.active {
+  pointer-events: none;
+  filter: grayscale(100%);
+}
 .modal .modalView .cofigFooter .cancelCar {
   background-color: var(--color17);
   color: var(--color18);
