--- a/client/wxapp/components/login/login.wxss
+++ b/client/wxapp/components/login/login.wxss
@@ -1,6 +1,7 @@
 /* components/login/login.wxss */
 @import '../../app.wxss';
 .login{position: absolute;width: 100%;height: 100%;left: 0;top: 0;z-index: 10;background-color: rgba(0,0,0,0.2);}
+.login view{position: relative;}
 
 /* .box {position: absolute;top: 264rpx;left: 50%;transform: translateX(-50%);text-align: center;} */
 .box{width: 100%;height: 100%;}
