--- a/client/wxapp/components/noticeBar/noticeBar.wxss
+++ b/client/wxapp/components/noticeBar/noticeBar.wxss
@@ -1,3 +1,4 @@
 /* components/noticeBar/noticeBar.wxss */
 .noticeBar{height: 80rpx;line-height: 80rpx;color: #c8a77d;background-color: #fbf4ea;font-size: 28rpx;text-align: left;padding: 0 20rpx;}
+.noticeBar view{position: relative;}
 .noticeBar .colse{width: 30rpx;height: 30rpx;text-align: center;line-height: 30rpx; color: #c8a77d;font-size: 30rpx;position: absolute;top: 10rpx;right: 20rpx;}
