--- a/client/wxapp/components/order/order.wxss
+++ b/client/wxapp/components/order/order.wxss
@@ -1,5 +1,6 @@
 /* components/order/order.wxss */
 @import "../../app.wxss";
+view { position: relative; }
 .content { width: 100%; height: 100%;overflow: hidden;background-color: var(--color24);}
 .topBabs .van-hairline--top-bottom:after {border-top: none;}
 .listBox .flexBox{display: flex;justify-content: space-between;align-items: center;}
