--- a/client/wxapp/components/user/user.wxss
+++ b/client/wxapp/components/user/user.wxss
@@ -1,4 +1,5 @@
 /* components/user/user.wxss */
+view { position: relative; }
 .content { width: 100%; height: 100%;background-color: var(--white);padding: 10rpx 35rpx;overflow-y: scroll;overflow-x: hidden;}
 .scrollBox{width: 100%;height: 100%;padding: 10rpx 35rpx;box-sizing: border-box;}
 .content .topTxt{font-size: 27rpx;color: var(--color31);margin-bottom: 10rpx;}
