--- a/client/wxapp/pages/orderSettle/orderSettle.wxss
+++ b/client/wxapp/pages/orderSettle/orderSettle.wxss
@@ -1,3 +1,4 @@
 /**标准16:9*/
+view { position: relative; }
 page { height: 100%; background-color: var(--color24);}
 .article { width: 100%; height: 100%;overflow: hidden;background-color: var(--color24);}
