--- a/client/wxapp/pages/orderSettleDetail/orderSettleDetail.wxss
+++ b/client/wxapp/pages/orderSettleDetail/orderSettleDetail.wxss
@@ -5,7 +5,7 @@ page { height: 100%; background-color: var(--color24);}
 .orderInfoScroll .box .iconCommon{color: #a7a7a7;}
 .orderInfoScroll .box .commonB{padding-top: 35rpx;}
 .orderInfoScroll .box{border-top: 1rpx solid transparent;}
-.orderInfoScroll .box .cardListBox .remarksBox .iconCommon{padding-left: 30rpx;}
+.orderInfoScroll .box .cardListBox .remarksBox .iconCommon{padding-left: 30rpx;margin-top: 5rpx;}
 .orderInfoScroll .box .cardListBox .flexBox2{ justify-content: flex-start;font-size: 24rpx;color:var(--color28);}
 .orderInfoScroll .box .cardListBox .flexBox2 .right{color: var(--color27);padding-left: 50rpx;font-size: 30rpx;}
 .orderInfoScroll .box .commonB .typeSelect{justify-content: flex-start;}
@@ -23,8 +23,8 @@ page { height: 100%; background-color: var(--color24);}
 .orderInfoScroll .guideTopRight2{justify-content: center;}
 
 
-.orderRedaus .stepBox{font-size: 24rpx;}
-.orderRedaus .stepBox .desTxt{font-size: 24rpx;left: -30rpx;}
+.orderRedaus .stepBox{font-size: 22rpx;}
+.orderRedaus .stepBox .desTxt{font-size: 22rpx;}
 .orderRedaus .stepBox .title{font-size: 28rpx;color: #676767;padding-left: 30rpx;}
 
 .orderInfoScroll .box .orderAdress{padding-top: 30rpx;}
@@ -44,6 +44,6 @@ page { height: 100%; background-color: var(--color24);}
 .orderInfoScroll .box .cardListBox .totalBoxDetail .left{font-size: 25rpx;}
 .orderInfoScroll .box .cardListBox .totalBoxDetail .right{font-size: 35rpx;font-weight: 700;}
 
-.codeBox{margin: 25rpx auto;border: 1rpx solid var(--color3);overflow: hidden;width: 260rpx;height: 260rpx;}
+.codeBox{margin: 25rpx auto;border: 1rpx solid var(--color3);overflow: hidden;width: 260rpx;height: 260rpx;position: relative;}
 .codeBox canvas{position: absolute;top: 50%;left: 50%;transform: translate(-50%,-50%);}
 /* .codeBox .img{width: 100%;height: 100%;position: absolute;top: 0;left: 0;} */
