--- a/client/wxapp/pages/receiveAddress/receiveAddress.wxss
+++ b/client/wxapp/pages/receiveAddress/receiveAddress.wxss
@@ -1,3 +1,4 @@
+view { position: relative; }
 page{width: 100%;height: 100%;}
 .receiveAddress{width: 100%;height: 100%;background-color: var(--color34);border-top: 1rpx solid transparent;}
 /* 空数据 s */
