--- a/client/wxapp/pages/shops/shops.wxss
+++ b/client/wxapp/pages/shops/shops.wxss
@@ -1,5 +1,5 @@
 /**标准16:9*/
-@import '/common/css/common.wxss';
+view { position: relative; }
 .storeVanTabs,.storeVanTabs .vanTab, .storeVanTabs .vanTab .van-tab__pane {
   width: 100%;
   height: 100%;
