--- a/client/wxapp/pages/orderSettleDetail/orderSettleDetail.wxml
+++ b/client/wxapp/pages/orderSettleDetail/orderSettleDetail.wxml
@@ -12,12 +12,15 @@
 					<text wx:if="{{userOrderinfo.state == 7}}">已取消</text>
 					<text wx:if="{{userOrderinfo.state == 9}}">已退款</text>
 				</view>
-				<view class="foodCode" wx:if="{{userOrderinfo.state == 2 && userOrderinfo.sendType == 1}}">{{userOrderinfo.fetchCode}}</view>
+				<view class="foodCode" wx:if="{{userOrderinfo.state == 2 && userOrderinfo.sendType == 1}}">
+					{{userOrderinfo.fetchCode}}</view>
 				<view class="codeBox" wx:if="{{userOrderinfo.state == 2 && userOrderinfo.sendType == 1}}">
-					<canvas class="canvas-code" canvas-id="myQrcode" style="background:#fff;width:{{qrcodeWidth}}px; height:{{qrcodeWidth}}px;" />
+					<canvas class="canvas-code" canvas-id="myQrcode"
+						style="background:#fff;width:{{qrcodeWidth}}px; height:{{qrcodeWidth}}px;" />
 					<!-- <image class="img" src="{{imgsrc}}"></image> -->
 				</view>
-				<view class="countDownBox" wx:if="{{userOrderinfo.state == 0 && userOrderinfo.payState == 0}}">{{countdown}}后订单将自动取消</view>
+				<view class="countDownBox" wx:if="{{userOrderinfo.state == 0 && userOrderinfo.payState == 0}}">
+					{{countdown}}后订单将自动取消</view>
 				<view class="guideTopRight" wx:if="{{userOrderinfo.state == 0 && userOrderinfo.payState == 0}}">
 					<view class="type type1 {{tactive ? 'active' : ''}}" catchtap="finished">
 						取消订单
@@ -26,7 +29,8 @@
 						立即支付
 					</view>
 				</view>
-				<view class="guideTopRight guideTopRight2" wx:if="{{userOrderinfo.state == 6 ||userOrderinfo.state == 7||userOrderinfo.state == 9}}">
+				<view class="guideTopRight guideTopRight2"
+					wx:if="{{userOrderinfo.state == 6 ||userOrderinfo.state == 7||userOrderinfo.state == 9}}">
 					<view class="type type2 {{userOrderinfo.state == 6 ? '' : 'active'}}" catchtap="btnPayAgainClick">
 						再来一单
 					</view>
@@ -36,7 +40,8 @@
 					<view class="typeSelect">
 						<view class="left title">订单信息</view>
 					</view>
-					<van-steps steps="{{ userOrderinfo.orderProcessList }}" active="{{ active }}" direction="vertical"  active-color="#e7645c" custom-class="stepsCon" desc-class="desTxt" />
+					<van-steps steps="{{ userOrderinfo.orderProcessList }}" active="{{ active }}" direction="vertical"
+						active-color="#e7645c" custom-class="stepsCon" desc-class="desTxt" />
 				</view>
 				<!-- 配送地址 -->
 				<view class="peisongAdress" wx:if="{{userOrderinfo.state == 2 && userOrderinfo.sendType == 2}}">
@@ -55,7 +60,8 @@
 			</view>
 			<!-- 商品列表 -->
 			<view class="cardListBox commonB">
-				<view class="title commonTitle">{{userOrderinfo.shopname}} <text class="iconfont icon_arrow_right"></text></view>
+				<view class="title commonTitle">{{userOrderinfo.shopname}} <text class="iconfont icon_arrow_right"></text>
+				</view>
 				<view class="listContent">
 					<view class="listContentItem" wx:for="{{cardList}}" wx:key="index">
 						<view class="left flexBox">
@@ -63,7 +69,8 @@
 								<image class="img" src="{{item.foodCover}}" mode="widthFix"></image>
 								<view class="info">
 									<text class="txt1">{{item.foodTitle}}</text>
-									<text class="txt2">{{item.foodSpecsName}}</text>
+									<!-- <text class="txt2" wx:if="{{tem.foodSpecsName}}">{{item.foodSpecsName}}</text> -->
+									<text class="txt2">{{item.foodProperties}}</text>
 									<text class="txt3">￥{{item.realPerPrice}}</text>
 								</view>
 							</view>
@@ -110,7 +117,8 @@
 						<view class="right"></view>
 					</view>
 					<view class="typeSelect flexBox">
-						<view class="left">{{userOrderinfo.orderDetail.userUsername}} {{userOrderinfo.orderDetail.userMobile}}</view>
+						<view class="left">{{userOrderinfo.orderDetail.userUsername}} {{userOrderinfo.orderDetail.userMobile}}
+						</view>
 					</view>
 					<view class="typeSelect flexBox">
 						<view class="left">{{userOrderinfo.orderDetail.userAddress}} {{userOrderinfo.orderDetail.userStreet}}</view>
@@ -135,7 +143,8 @@
 		</view>
 	</scroll-view>
 	<!-- 商品列表弹窗 -->
-	<van-popup show="{{ show }}" position="bottom" custom-style="min-height:20%;border-top-left-radius: 20rpx;border-top-right-radius: 20rpx;" bind:close="onClose">
+	<van-popup show="{{ show }}" position="bottom"
+		custom-style="min-height:20%;border-top-left-radius: 20rpx;border-top-right-radius: 20rpx;" bind:close="onClose">
 		<view class="popup_cardDetailList">
 			<view class="topBar">
 				<view class="colse" catchtap="onClose">
